--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,22 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
+
+ext {
+    //Versions up to date as of 2022-11-21
+    activityVersion = '1.6.1'
+    appCompatVersion = '1.5.1'
+    constraintLayoutVersion = '2.1.4'
+    coreTestingVersion = '2.1.0'
+    coroutines = '1.6.4'
+    lifecycleVersion = '2.5.1'
+    materialVersion = '1.7.0'
+    roomVersion = '2.4.3'
+    gsonVersion = '2.10'
+    navigation = '2.5.3'
+    coil = "1.1.0"
+    // testing
+    junitVersion = '4.13.2'
+    espressoVersion = '3.4.0'
+    androidxJunitVersion = '1.1.4'
+}
