--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -47,4 +48,26 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+
+    implementation "androidx.room:room-ktx:$rootProject.roomVersion"
+    kapt "androidx.room:room-compiler:$rootProject.roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+
+    //    implementation 'androidx.room:room-runtime:2.4.3'
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+//    kapt 'androidx.room:room-compiler:2.4.3'
+    // optional - RxJava2 support for Room
+    implementation 'androidx.room:room-rxjava2:2.4.3'
+    // optional - RxJava3 support for Room
+    implementation 'androidx.room:room-rxjava3:2.4.3'
+    // optional - Guava support for Room, including Optional and ListenableFuture
+    implementation 'androidx.room:room-guava:2.4.3'
+    // optional - Test helpers
+    testImplementation 'androidx.room:room-testing:2.4.3'
+    // optional - Paging 3 Integration
+    implementation 'androidx.room:room-paging:2.4.3'
 }
