Added unit tests for all pokemon math except for calculateDamage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,10 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    androidTestImplementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
 
     implementation "androidx.room:room-ktx:$rootProject.roomVersion"
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
 
