--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     androidTestImplementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-
+    implementation("io.coil-kt:coil:2.2.2")
     implementation "androidx.fragment:fragment-ktx:1.4.1"
     def lifecycle_version = "2.4.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
